--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "cypress run",
-    "test:open": "cypress open",
-    "test:dev": "cypress run --headed"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
@@ -34,7 +31,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "cypress": "^13.6.0"
+    "vite": "^5.4.2"
   }
 }
